src/objects/Data_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Mortality_Data_Available__c</fullName>
        <label>Mortality Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_No_Data_Recommendation__c</fullName>
        <label>Number of No - Data Recommendation</label>
        <summaryFilterItems>
            <field>Data_Asset_Feedback__c.Data_Recommendation__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_No_Gaps__c</fullName>
        <label>Number of No - Gaps</label>
        <summaryFilterItems>
            <field>Data_Asset_Feedback__c.Gaps_in_the_Data__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Yes_Data_Recommendation__c</fullName>
        <label>Number of Yes - Data Recommendation</label>
        <summaryFilterItems>
            <field>Data_Asset_Feedback__c.Data_Recommendation__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Yes_Gaps__c</fullName>
        <label>Number of Yes - Gaps</label>
        <summaryFilterItems>
            <field>Data_Asset_Feedback__c.Gaps_in_the_Data__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ongoing_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Data_Review_Stars__c</fullName>
        <formula>IF( AND(0&lt; Overall_Rating_Data_Review__c, Overall_Rating_Data_Review__c &lt;0.3) ,  IMAGE(&quot;/resource/R3Style/assets/img/Stars/0-star.png&quot; , &quot;0&quot;,16,80) ,  IF(AND(0.3&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;0.8),  IMAGE(&quot;/resource/R3Style/assets/img/Stars/0-and-half-star.png&quot; , &quot;0.5&quot;,16,80),  IF(AND(0.8&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;1.3), IMAGE(&quot;/resource/R3Style/assets/img/Stars/1-star.png&quot; , &quot;1&quot;,16,80),  IF(AND(1.3&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;1.8), IMAGE(&quot;/resource/R3Style/assets/img/Stars/1-and-half-star.png&quot; , &quot;1.5&quot;,16,80),  IF(AND(1.8&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;2.3), IMAGE(&quot;/resource/R3Style/assets/img/Stars/2-star.png&quot; , &quot;2&quot;,16,80),  IF(AND(2.3&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;2.8), IMAGE(&quot;/resource/R3Style/assets/img/Stars/2-and-half-star.png&quot; , &quot;2.5&quot;,16,80),  IF(AND(2.8&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;3.3), IMAGE(&quot;/resource/R3Style/assets/img/Stars/3-star.png&quot; , &quot;3&quot;,16,80),  IF(AND(3.3&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;3.8), IMAGE(&quot;/resource/R3Style/assets/img/Stars/3-and-half-star.png&quot; , &quot;3.5&quot;,16,80),  IF(AND(3.8&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;4.3), IMAGE(&quot;/resource/R3Style/assets/img/Stars/4-star.png&quot; , &quot;4&quot;,16,80),  IF(AND(4.3&lt;= Overall_Rating_Data_Review__c , Overall_Rating_Data_Review__c &lt;4.8), IMAGE(&quot;/resource/R3Style/assets/img/Stars/4-and-half-star.png&quot; , &quot;4.5&quot;,16,80),  IF(Overall_Rating_Data_Review__c &gt;=4.8, IMAGE(&quot;/resource/R3Style/assets/img/Stars/5-star.png&quot; , &quot;5&quot;,16,80), &quot;Not Rated&quot;)))))))))))</formula>
        <label>Overall Rating - Data(Stars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Data_Review__c</fullName>
        <formula>IF( Number_of_Reviews__c &gt; 0, ROUND((Data_TF_Sum__c/ Number_of_Reviews__c),1), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating - Data(Number)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Data_Stars_Number__c</fullName>
        <formula>IF(Number_of_Reviews__c = 0 , &quot;Not Rated&quot;,  Overall_Rating_Data_Review_Stars__c + &quot; (&quot; +  TEXT(  Overall_Rating_Data_Review__c)+ &quot;)&quot;)</formula>
        <label>Overall Rating - Data(Stars - Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_History_Comment__c</fullName>
        <label>Patient Characteristics Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_History__c</fullName>
        <label>Patient History</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol Use</fullName>
                </value>
                <value>
                    <fullName>Biopsy</fullName>
                </value>
                <value>
                    <fullName>Cause of Death</fullName>
                </value>
                <value>
                    <fullName>Chronic Disease Score</fullName>
                </value>
                <value>
                    <fullName>Co-morbidities</fullName>
                </value>
                <value>
                    <fullName>Comorbidity Index</fullName>
                </value>
                <value>
                    <fullName>​Date of Death</fullName>
                </value>
                <value>
                    <fullName>Date of Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
                <value>
                    <fullName>Family Linkage</fullName>
                </value>
                <value>
                    <fullName>Genomic Data</fullName>
                </value>
                <value>
                    <fullName>Primary Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Secondary Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Smoking</fullName>
                </value>
                <value>
                    <fullName>Vaccine</fullName>
                </value>
                <value>
                    <fullName>Xray/MRI, etc</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PharmacyRx_Data_Available__c</fullName>
        <label>Medication Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacy_Details_Comment__c</fullName>
        <label>Medication Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Details__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Medication Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName># Refills</fullName>
                </value>
                <value>
                    <fullName>Active ingredient</fullName>
                </value>
                <value>
                    <fullName>Blood Glucose Monitoring Supplies</fullName>
                </value>
                <value>
                    <fullName>Days of Supply in Rx</fullName>
                </value>
                <value>
                    <fullName>Dose</fullName>
                </value>
                <value>
                    <fullName>Drugs Consumed</fullName>
                </value>
                <value>
                    <fullName>Frequency of Administration</fullName>
                </value>
                <value>
                    <fullName>Medication Duration</fullName>
                </value>
                <value>
                    <fullName>Medication Start Date</fullName>
                </value>
                <value>
                    <fullName>Medication Stop Date</fullName>
                </value>
                <value>
                    <fullName>Metric Quantity and Unit</fullName>
                </value>
                <value>
                    <fullName>Prescriber Specialty</fullName>
                </value>
                <value>
                    <fullName>​Prescription Date</fullName>
                </value>
                <value>
                    <fullName>Pump Related Supplies</fullName>
                </value>
                <value>
                    <fullName>Reason Discontinued</fullName>
                </value>
                <value>
                    <fullName>Reason for Rx</fullName>
                </value>
                <value>
                    <fullName>Reason Switched</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
                <value>
                    <fullName>Trademark</fullName>
                </value>
                <value>
                    <fullName>Treatment Class</fullName>
                </value>
                <value>
                    <fullName>Unique Product Code</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacy_Type__c</fullName>
        <label>Pharmacy Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prescription- Inpatient</fullName>
                </value>
                <value>
                    <fullName>Prescription- Outpatient</fullName>
                </value>
                <value>
                    <fullName>Prescription - OTC / Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescription_Coding_System__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Prescription Coding System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AHFS</fullName>
                </value>
                <value>
                    <fullName>ATC</fullName>
                </value>
                <value>
                    <fullName>BNF</fullName>
                </value>
                <value>
                    <fullName>GPI</fullName>
                </value>
                <value>
                    <fullName>Multilix</fullName>
                </value>
                <value>
                    <fullName>NDC</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>RxNorm</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Coding_System__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Procedure Coding System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ICD-9</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>HCPCS</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>OPCS-4</fullName>
                </value>
                <value>
                    <fullName>OPS</fullName>
                </value>
                <value>
                    <fullName>Radiation</fullName>
                </value>
                <value>
                    <fullName>Chemotherapy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QOL_Perform_Status_measures_available__c</fullName>
        <label>QOL Measures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Geographic region that the research study or data source represents.</inlineHelpText>
        <label>Data Asset Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUCAN</fullName>
                    <color>#0B6FCE</color>
                    <label>EUCAN</label>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                    <color>#78C953</color>
                    <label>Emerging Markets</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <color>#E27001</color>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <color>#A845DC</color>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Global (Multiple Regions)</fullName>
                    <color>#F3D904</color>
                    <label>Global (Multiple Regions)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Study_ID_TF__c</fullName>
        <description>Technical field for Storing Study ID if Data Asset is created from CreateStudy page.</description>
        <label>Related Study ID_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                    <color>#0B6FCE</color>
                    <label>Academic</label>
                </value>
                <value>
                    <fullName>Government</fullName>
                    <color>#78C953</color>
                    <label>Government</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <color>#E27001</color>
                    <label>Vendor</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#A845DC</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_Therapeutic_Area__c</fullName>
        <label>Relevant Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setting_of_Care__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Setting of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acute Emergency Department</fullName>
                </value>
                <value>
                    <fullName>Hospice</fullName>
                </value>
                <value>
                    <fullName>In-Home Health Care</fullName>
                </value>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Long Term Care</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Other (Specify in Comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Year_of_Available__c</fullName>
        <inlineHelpText>When data collection began</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Lag__c</fullName>
        <label>Time Lag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real Time</fullName>
                </value>
                <value>
                    <fullName>0-45 Days</fullName>
                </value>
                <value>
                    <fullName>46-90 days</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Grater than 12 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tumor_Stage_Available__c</fullName>
        <label>Tumor Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Database_Comments__c</fullName>
        <label>Other Measures Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Database__c</fullName>
        <label>Type of Database</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Cohort Study</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>EMR-Claims Linked</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Sickness Fund (EU)</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <inlineHelpText>Lilly and Partner/Vendor</inlineHelpText>
        <label>Vendor Contact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vital_Signs__c</fullName>
        <label>Vital Signs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blood pressure</fullName>
                </value>
                <value>
                    <fullName>BMI</fullName>
                </value>
                <value>
                    <fullName>BSA</fullName>
                </value>
                <value>
                    <fullName>Height</fullName>
                </value>
                <value>
                    <fullName>Temperature</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Data Asset</label>
    <listViews>
        <fullName>ACE_Data_Assets</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Database__c</columns>
        <columns>Type_of_Database_Comments__c</columns>
        <columns>Setting_of_Care__c</columns>
        <columns>Enrollment_Number_Of_Patients__c</columns>
        <columns>Enrollment_Number_of_Patients_Comment__c</columns>
        <columns>Start_Year_of_Available__c</columns>
        <columns>Description_of_Database__c</columns>
        <columns>End_Date__c</columns>
        <columns>Website__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>Global (multiple regions)</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>Emerging Markets</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ACE Data Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Disease_State__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>Access_Method__c</columns>
        <columns>Access_Details__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Business_Unit_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Asset_Assessment_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>Access_Method__c</columns>
        <columns>Access_Details__c</columns>
        <columns>Relationship_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <filters>
            <field>Asset_Status__c</field>
            <operation>equals</operation>
            <value>Assessment in Progress</value>
        </filters>
        <label>Asset Assessment In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cleaning_RWDI_Record_Owner</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Business_Unit_Primary__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Nolot,Dick,Mills,Hottgenroth</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Cleaning - RWDI Record Owner - US</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cleaning_RWDI_Record_Owner_EM_Japan</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Business_Unit_Primary__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Nolot,Dick,Mills,Hottgenroth</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Emerging Markets,Japan</value>
        </filters>
        <label>Cleaning - RWDI Record Owner - EM/Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cleaning_RWDI_Record_Owner_Global</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Business_Unit_Primary__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Nolot,Dick,Mills,Hottgenroth</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Global (Multiple Regions)</value>
        </filters>
        <label>Cleaning - RWDI Record Owner - Global</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_in_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company_Name__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Created in Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DataMart_Assets</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Database__c</columns>
        <columns>Description_of_Database__c</columns>
        <columns>Data_Steward__c</columns>
        <columns>Region__c</columns>
        <columns>Start_Year_of_Available__c</columns>
        <columns>End_Date__c</columns>
        <columns>Business_Unit_Primary__c</columns>
        <columns>Access_Details__c</columns>
        <columns>Access_Method__c</columns>
        <columns>Asset_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Details__c</field>
            <operation>equals</operation>
            <value>​Data Mart - RWE Multi-use Contract</value>
        </filters>
        <label>DataMart Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_Assets_in_RWE_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Access_Details__c</columns>
        <columns>Access_Method__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Asset_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Details__c</field>
            <operation>equals</operation>
            <value>RWE Partnership</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Data_Asset__c.RWE_Data_Asset</value>
        </filters>
        <label>Data Assets in RWE Partnerships</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_Broker_Landscape_Projects</fullName>
        <columns>NAME</columns>
        <columns>Description_of_Database__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Vendor_Contact__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>LANDSCAPE</value>
        </filters>
        <label>Landscape Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Diabetes_Assets_w_BMI_Labs_RX</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Access_Method__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Vital_Signs__c</columns>
        <columns>Relevant_Therapeutic_Area__c</columns>
        <columns>Type_of_Database__c</columns>
        <columns>Lab_Values_Available__c</columns>
        <columns>PharmacyRx_Data_Available__c</columns>
        <columns>Region__c</columns>
        <columns>Lilly_Internal_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relevant_Therapeutic_Area__c</field>
            <operation>contains</operation>
            <value>Diabetes</value>
        </filters>
        <filters>
            <field>Lab_Values_Available__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Relevant_Therapeutic_Area__c</field>
            <operation>contains</operation>
            <value>Non Therapeutic Area Specific</value>
        </filters>
        <label>Diabetes Assets w BMI, Labs and RX</label>
        <language>en_US</language>
    </listViews>
</CustomObject>